workspace = { members = ["macros"] }


[package]
name = "bevy_test_helper"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.15.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"], optional = true }
bevy_test_helper_macro_impl = { path = "macros" }

[features]
default = []
serde = ["dep:serde"]
